src/gen/java/grammar/NottexParser.java
// Generated from Nottex.g4 by ANTLR 4.5.3
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NottexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TAG_MARKER=1, COMMA=2, FUNCTION_MARKER=3, COLON=4, LPAREN=5, RPAREN=6, 
		LBRACE=7, RBRACE=8, ESCAPED_QUOTE=9, ESCAPED_BACKSLASH=10, BACKSLASH=11, 
		QUOTE=12, PLUS=13, MINUS=14, MULTIP=15, DIVIS=16, WS=17, NUMBER=18, ALPHA=19;
	public static final int
		RULE_markupText = 0, RULE_functionCall = 1, RULE_tagUse = 2, RULE_tagIdens = 3, 
		RULE_text = 4, RULE_funcArgs = 5, RULE_funcArg = 6, RULE_expr = 7, RULE_sub = 8, 
		RULE_factor = 9, RULE_string = 10, RULE_ws = 11;
	public static final String[] ruleNames = {
		"markupText", "functionCall", "tagUse", "tagIdens", "text", "funcArgs", 
		"funcArg", "expr", "sub", "factor", "string", "ws"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "',,'", "','", "'::'", "':'", "'('", "')'", "'{'", "'}'", "'\\\"'", 
		"'\\\\'", "'\\'", "'\"'", "'+'", "'-'", "'*'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "TAG_MARKER", "COMMA", "FUNCTION_MARKER", "COLON", "LPAREN", "RPAREN", 
		"LBRACE", "RBRACE", "ESCAPED_QUOTE", "ESCAPED_BACKSLASH", "BACKSLASH", 
		"QUOTE", "PLUS", "MINUS", "MULTIP", "DIVIS", "WS", "NUMBER", "ALPHA"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Nottex.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NottexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MarkupTextContext extends ParserRuleContext {
		public List<FunctionCallContext> functionCall() {
			return getRuleContexts(FunctionCallContext.class);
		}
		public FunctionCallContext functionCall(int i) {
			return getRuleContext(FunctionCallContext.class,i);
		}
		public List<TagUseContext> tagUse() {
			return getRuleContexts(TagUseContext.class);
		}
		public TagUseContext tagUse(int i) {
			return getRuleContext(TagUseContext.class,i);
		}
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public MarkupTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_markupText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).enterMarkupText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).exitMarkupText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NottexVisitor ) return ((NottexVisitor<? extends T>)visitor).visitMarkupText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MarkupTextContext markupText() throws RecognitionException {
		MarkupTextContext _localctx = new MarkupTextContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_markupText);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(27); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(27);
					switch (_input.LA(1)) {
					case FUNCTION_MARKER:
						{
						setState(24);
						functionCall();
						}
						break;
					case TAG_MARKER:
						{
						setState(25);
						tagUse();
						}
						break;
					case COMMA:
					case COLON:
					case LPAREN:
					case RPAREN:
					case LBRACE:
					case RBRACE:
					case ESCAPED_QUOTE:
					case ESCAPED_BACKSLASH:
					case BACKSLASH:
					case QUOTE:
					case PLUS:
					case MINUS:
					case MULTIP:
					case DIVIS:
					case WS:
					case NUMBER:
					case ALPHA:
						{
						setState(26);
						text();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(29); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public Token ALPHA;
		public List<Token> name = new ArrayList<Token>();
		public FuncArgsContext argumentsNode;
		public TerminalNode FUNCTION_MARKER() { return getToken(NottexParser.FUNCTION_MARKER, 0); }
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(NottexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(NottexParser.RPAREN, 0); }
		public List<TerminalNode> ALPHA() { return getTokens(NottexParser.ALPHA); }
		public TerminalNode ALPHA(int i) {
			return getToken(NottexParser.ALPHA, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(NottexParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(NottexParser.NUMBER, i);
		}
		public FuncArgsContext funcArgs() {
			return getRuleContext(FuncArgsContext.class,0);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).exitFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NottexVisitor ) return ((NottexVisitor<? extends T>)visitor).visitFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functionCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			match(FUNCTION_MARKER);
			setState(32);
			((FunctionCallContext)_localctx).ALPHA = match(ALPHA);
			((FunctionCallContext)_localctx).name.add(((FunctionCallContext)_localctx).ALPHA);
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NUMBER || _la==ALPHA) {
				{
				{
				setState(33);
				_la = _input.LA(1);
				if ( !(_la==NUMBER || _la==ALPHA) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(39);
			ws();
			setState(40);
			match(LPAREN);
			setState(41);
			ws();
			setState(43);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION_MARKER) | (1L << LPAREN) | (1L << QUOTE) | (1L << MINUS) | (1L << NUMBER))) != 0)) {
				{
				setState(42);
				((FunctionCallContext)_localctx).argumentsNode = funcArgs();
				}
			}

			setState(45);
			ws();
			setState(46);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagUseContext extends ParserRuleContext {
		public TagIdensContext namesNode;
		public MarkupTextContext content;
		public TerminalNode TAG_MARKER() { return getToken(NottexParser.TAG_MARKER, 0); }
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(NottexParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(NottexParser.RBRACE, 0); }
		public TagIdensContext tagIdens() {
			return getRuleContext(TagIdensContext.class,0);
		}
		public MarkupTextContext markupText() {
			return getRuleContext(MarkupTextContext.class,0);
		}
		public TagUseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagUse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).enterTagUse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).exitTagUse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NottexVisitor ) return ((NottexVisitor<? extends T>)visitor).visitTagUse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagUseContext tagUse() throws RecognitionException {
		TagUseContext _localctx = new TagUseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tagUse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(TAG_MARKER);
			setState(49);
			((TagUseContext)_localctx).namesNode = tagIdens();
			setState(50);
			ws();
			setState(51);
			match(LBRACE);
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(52);
				((TagUseContext)_localctx).content = markupText();
				}
				break;
			}
			setState(55);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagIdensContext extends ParserRuleContext {
		public Token ALPHA;
		public List<Token> names = new ArrayList<Token>();
		public List<TerminalNode> ALPHA() { return getTokens(NottexParser.ALPHA); }
		public TerminalNode ALPHA(int i) {
			return getToken(NottexParser.ALPHA, i);
		}
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(NottexParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(NottexParser.COMMA, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(NottexParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(NottexParser.NUMBER, i);
		}
		public TagIdensContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagIdens; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).enterTagIdens(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).exitTagIdens(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NottexVisitor ) return ((NottexVisitor<? extends T>)visitor).visitTagIdens(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagIdensContext tagIdens() throws RecognitionException {
		TagIdensContext _localctx = new TagIdensContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tagIdens);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			((TagIdensContext)_localctx).ALPHA = match(ALPHA);
			((TagIdensContext)_localctx).names.add(((TagIdensContext)_localctx).ALPHA);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NUMBER || _la==ALPHA) {
				{
				{
				setState(58);
				_la = _input.LA(1);
				if ( !(_la==NUMBER || _la==ALPHA) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(64);
					ws();
					setState(65);
					match(COMMA);
					setState(66);
					ws();
					setState(67);
					((TagIdensContext)_localctx).ALPHA = match(ALPHA);
					((TagIdensContext)_localctx).names.add(((TagIdensContext)_localctx).ALPHA);
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NUMBER || _la==ALPHA) {
						{
						{
						setState(68);
						_la = _input.LA(1);
						if ( !(_la==NUMBER || _la==ALPHA) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						}
						}
						setState(73);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					} 
				}
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public Token ALPHA;
		public List<Token> content = new ArrayList<Token>();
		public Token NUMBER;
		public Token COMMA;
		public Token COLON;
		public Token QUOTE;
		public Token LPAREN;
		public Token RPAREN;
		public Token LBRACE;
		public Token RBRACE;
		public Token PLUS;
		public Token MINUS;
		public Token MULTIP;
		public Token DIVIS;
		public Token ESCAPED_QUOTE;
		public Token BACKSLASH;
		public Token ESCAPED_BACKSLASH;
		public Token WS;
		public Token _tset121;
		public List<TerminalNode> ALPHA() { return getTokens(NottexParser.ALPHA); }
		public TerminalNode ALPHA(int i) {
			return getToken(NottexParser.ALPHA, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(NottexParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(NottexParser.NUMBER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(NottexParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(NottexParser.COMMA, i);
		}
		public List<TerminalNode> COLON() { return getTokens(NottexParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(NottexParser.COLON, i);
		}
		public List<TerminalNode> QUOTE() { return getTokens(NottexParser.QUOTE); }
		public TerminalNode QUOTE(int i) {
			return getToken(NottexParser.QUOTE, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(NottexParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(NottexParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(NottexParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(NottexParser.RPAREN, i);
		}
		public List<TerminalNode> LBRACE() { return getTokens(NottexParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(NottexParser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(NottexParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(NottexParser.RBRACE, i);
		}
		public List<TerminalNode> PLUS() { return getTokens(NottexParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(NottexParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(NottexParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(NottexParser.MINUS, i);
		}
		public List<TerminalNode> MULTIP() { return getTokens(NottexParser.MULTIP); }
		public TerminalNode MULTIP(int i) {
			return getToken(NottexParser.MULTIP, i);
		}
		public List<TerminalNode> DIVIS() { return getTokens(NottexParser.DIVIS); }
		public TerminalNode DIVIS(int i) {
			return getToken(NottexParser.DIVIS, i);
		}
		public List<TerminalNode> ESCAPED_QUOTE() { return getTokens(NottexParser.ESCAPED_QUOTE); }
		public TerminalNode ESCAPED_QUOTE(int i) {
			return getToken(NottexParser.ESCAPED_QUOTE, i);
		}
		public List<TerminalNode> BACKSLASH() { return getTokens(NottexParser.BACKSLASH); }
		public TerminalNode BACKSLASH(int i) {
			return getToken(NottexParser.BACKSLASH, i);
		}
		public List<TerminalNode> ESCAPED_BACKSLASH() { return getTokens(NottexParser.ESCAPED_BACKSLASH); }
		public TerminalNode ESCAPED_BACKSLASH(int i) {
			return getToken(NottexParser.ESCAPED_BACKSLASH, i);
		}
		public List<TerminalNode> WS() { return getTokens(NottexParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(NottexParser.WS, i);
		}
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).enterText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).exitText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NottexVisitor ) return ((NottexVisitor<? extends T>)visitor).visitText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_text);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(79);
					((TextContext)_localctx)._tset121 = _input.LT(1);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMA) | (1L << COLON) | (1L << LPAREN) | (1L << RPAREN) | (1L << LBRACE) | (1L << RBRACE) | (1L << ESCAPED_QUOTE) | (1L << ESCAPED_BACKSLASH) | (1L << BACKSLASH) | (1L << QUOTE) | (1L << PLUS) | (1L << MINUS) | (1L << MULTIP) | (1L << DIVIS) | (1L << WS) | (1L << NUMBER) | (1L << ALPHA))) != 0)) ) {
						((TextContext)_localctx)._tset121 = (Token)_errHandler.recoverInline(this);
					} else {
						consume();
					}
					((TextContext)_localctx).content.add(((TextContext)_localctx)._tset121);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(82); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncArgsContext extends ParserRuleContext {
		public FuncArgContext funcArg;
		public List<FuncArgContext> argumentNodes = new ArrayList<FuncArgContext>();
		public List<FuncArgContext> funcArg() {
			return getRuleContexts(FuncArgContext.class);
		}
		public FuncArgContext funcArg(int i) {
			return getRuleContext(FuncArgContext.class,i);
		}
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(NottexParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(NottexParser.COMMA, i);
		}
		public FuncArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).enterFuncArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).exitFuncArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NottexVisitor ) return ((NottexVisitor<? extends T>)visitor).visitFuncArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncArgsContext funcArgs() throws RecognitionException {
		FuncArgsContext _localctx = new FuncArgsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcArgs);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			((FuncArgsContext)_localctx).funcArg = funcArg();
			((FuncArgsContext)_localctx).argumentNodes.add(((FuncArgsContext)_localctx).funcArg);
			setState(92);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(85);
					ws();
					setState(86);
					match(COMMA);
					setState(87);
					ws();
					setState(88);
					((FuncArgsContext)_localctx).funcArg = funcArg();
					((FuncArgsContext)_localctx).argumentNodes.add(((FuncArgsContext)_localctx).funcArg);
					}
					} 
				}
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncArgContext extends ParserRuleContext {
		public FuncArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcArg; }
	 
		public FuncArgContext() { }
		public void copyFrom(FuncArgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunctionCallArgContext extends FuncArgContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public FunctionCallArgContext(FuncArgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).enterFunctionCallArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).exitFunctionCallArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NottexVisitor ) return ((NottexVisitor<? extends T>)visitor).visitFunctionCallArg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExpressionArgContext extends FuncArgContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExpressionArgContext(FuncArgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).enterExpressionArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).exitExpressionArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NottexVisitor ) return ((NottexVisitor<? extends T>)visitor).visitExpressionArg(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringArgContext extends FuncArgContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public StringArgContext(FuncArgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).enterStringArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NottexListener ) ((NottexListener)listener).exitStringArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NottexVisitor ) return ((NottexVisitor<? extends T>)visitor).visitStringArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncArgContext funcArg() throws RecognitionException {
		FuncArgContext _localctx = new FuncArgContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcArg);
		try {
			setState(98);
			switch (_input.LA(1)) {
			case QUOTE:
				_localctx = new StringArgContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				string();
				}
				break;
			case LPAREN:
			case MINUS:
			case NUMBER:
				_localctx = new ExpressionArgContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				expr(0);
				}
				break;
			case FUNCTION_MARKER:
				_localctx = new FunctionCallArgContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				functionCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
